BE - refactor(sentence): streamline sentence splitting logic and improve whitespace handling; FE - feat(practice): enhance sentence normalization and result validation in practice flow